# SigGate-GT

./: .env.example  .gitignore  README.md  environment.yml  evaluate.py  pyproject.toml  requirements.txt  train.py
configs/: config.yaml
configs/data/: ogbg_molhiv.yaml  ogbg_molpcba.yaml  peptides_func.yaml  peptides_struct.yaml  zinc.yaml
configs/experiment/: ablation_gate_placement.yaml  ogbg_molhiv.yaml  ogbg_molpcba.yaml  peptides_func.yaml  peptides_struct.yaml  zinc.yaml
configs/model/: lrgb.yaml  ogb.yaml  zinc.yaml
configs/training/: debug.yaml  default.yaml
src/: __init__.py  __version__.py
src/data/: __init__.py  dataloader.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/: __init__.py  attention.py  layers.py  losses.py  siggate_gps.py
src/utils/: __init__.py  checkpoint.py
tests/: conftest.py  test_attention.py  test_evaluation.py  test_model.py
tests/fixtures/: sample_config.yaml
